# topdeck

./: CMakeLists.txt  platformio.ini
design/: bottom_layer_2x.stl  key_layer_left.stl  key_layer_right.stl  keyboard.txt  mid_layer_2x.stl  top_layer_left.stl  top_layer_right.stl
src/: keymap.h  main.c  main.cpp
